service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapp 
  name: myapp-svc
spec:
  selector:
    app: myapp-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
